--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
         "node": ">= 4.0.0"
     },
 
+    "devDependencies": {
+        "jasmine": "^2.5.2"
+    },
+
+    "scripts": {
+        "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
+    },
+
     "contributors": [
         { "name": "erik", "email": "errorrik@gmail.com" }
     ],
